--- a/_posts/2017-02-19-东莞.md
+++ b/_posts/2017-02-19-东莞.md
@@ -8,9 +8,10 @@ grammar_cjkRuby: true
 
 直到所有的红灯都熄了也不停留
 
-~[东莞][1]
+[歌曲链接][1]
 
 
   [1]: http://music.163.com/#/m/song?id=460507249&userid=76364223
+  
   值得推荐的一首歌
   
