修改文件: _posts/2017-02-25-泡椒凤爪.md

--- a/_posts/2017-02-25-泡椒凤爪.md
+++ b/_posts/2017-02-25-泡椒凤爪.md
@@ -1,12 +1,7 @@
 ---
-title: 泡椒凤爪
+
 tags: 生活
 date: 2017-02-25 22:00
 grammar_cjkRuby: true
 ---
-最近特别想吃泡椒凤爪，大概是加罂粟壳了吧
-
-![enter description here][1]
-
-
-  [1]: /img/9.jpg
+50红包换不来50现钱，这就是现实。
